--- a/xmas/style.css
+++ b/xmas/style.css
@@ -174,11 +174,14 @@ button {
 }
 
 footer {
-  text-align: center;
   font-family: 'im_fell_double_picaregular';
   padding: 1em;
-  /* border-top: 4px solid #e60000; */
   color: white;
+  width: 96%;
+  margin: 0 auto;
+  background:  #e60000;
+  border-radius: 0 0 18px 18px;
+  text-align: center;
 }
 
 /* Extra small devices (phones, 600px and down) */
