--- a/xmas/style.css
+++ b/xmas/style.css
@@ -20,16 +20,9 @@
 }
 
 html {
-  background-image: url("christmasBackground2.jpg");
-  background-size: cover;
 }
 
 body {
-  width: 85%;
-  margin: 2em auto;
-  border-radius: 10px;
-  background: white;
-  padding-bottom: 1em;
 }
 
 header img {
@@ -77,12 +70,19 @@ a {
 }
 
 .navbar {
-  display: flex;
   width: 96%;
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
   background:  #e60000;
   border-radius: 18px 18px 0 0;
   text-align: center;
+}
+
+.navbar li {
+  padding: .8em .0;
+  transition: background-color 0.2s;
+  -webkit-transition: background-color 0.2s;
 }
 
 .navbar > li:hover {
@@ -90,16 +90,20 @@ a {
   cursor: pointer;
 }
 
-#brL:hover{
-  border-radius: 18px 0 0 0;
-  color:black;
+.navbar li:first-child {
+  color: white;
+  border-radius: inherit;
 }
 
-.navbar li {
-  padding: .8em .0;
-  flex-basis: 7em;
-  transition: background-color 0.2s;
-  -webkit-transition: background-color 0.2s;
+.navLinkProper {
+  display: none;
+}
+
+.expandedNav {
+  display: flex;
+  transition: display 0.2s;
+  -webkit-transition: display 0.2s;
+  flex-direction: column;
 }
 
 .navbar a {
@@ -117,7 +121,7 @@ p {
 }
 
 main {
-  display: flex;
+  display: block;
   width: 96%;
   margin: 0 auto;
   padding: 1em 0;
@@ -130,34 +134,34 @@ article {
 aside {
   margin-bottom: 3em;
   text-align: center;
-
 }
 
-/* aside h3 { */
-  /* text-align: center; */
-/* } */
-
 aside img {
-  width: 100%;
+  display: block;
+  width: 250px;
   height: auto;
+  margin: 0 auto;
 }
 
 aside p {
   font-size: .9em;
+  text-align: left;
 }
 
 .mainContent {
-  flex:8;
+  flex:9.5;
   padding: 1em;
 }
 
 .sideContent {
-  flex:2;
+  flex:2.5;
   padding: 1em;
   flex-wrap: wrap;
   /* border-left: 5px solid #e60000;   */
   background-color:  #f2f2f2;
   border-radius: 8px;
+  display: grid;
+  justify-content: space-between;
 }
 
 button {
@@ -166,11 +170,24 @@ button {
 
 .videoHidden {
   display: none;
+  position: relative;
 }
 
 .videoDisplay {
   display: block;
-  padding: 1em 0;
+  overflow: hidden;
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
+iframe {
+   border: 0;
+   height: 100%;
+   left: 0;
+   position: absolute;
+   top: 1em;
+   width: 100%;
+   /* max-width: 600px; */
 }
 
 footer {
@@ -185,23 +202,84 @@ footer {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 37.5em) {
-  
+@media only screen and (max-width: 37.5em) {  
 }
 	
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 37.5em) {
+@media only screen and (min-width: 37.5em) {  
+  .navbar {
+    flex-direction: row;
+  }
 
+  .navLinkProper {
+    display: inline-block;
+  }  
+
+  .navbar li:first-child {
+    display: none;
+  }    
+  
+  .navbar li {
+    padding: .8em .0;
+    transition: background-color 0.2s;
+    -webkit-transition: background-color 0.2s;
+    flex-basis: 7em;
+  }
+  
+  .navbar li:nth-of-type(2):hover{
+    border-radius: 18px 0 0 0;
+  }  
+
+  aside img {
+    width: 258px;
+    height: auto;
+  }   
+  iframe {
+    width: 85%;
+    height:85%
+  }   
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 48em) {
-   
-} 
+  html {
+    background-image: url("christmasBackground2.jpg");
+    background-size: cover;
+  }
+  
+  body {
+    width: 90%;
+    margin: 2em auto;
+    border-radius: 10px;
+    background: white;
+    padding-bottom: 1em;
+  }  
+
+  aside img {
+    width: 265px;
+    height: auto;
+  }  
+  
+  iframe {
+    width: 80%;
+    height:80%
+  }     
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 62em) {
-	
+  body {
+    width: 85%;
+  }
+
+  main {
+    display: flex;
+  }
+  
+  aside img {
+    width: 100%;
+    height: auto;
+  }	     
 } 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
