--- a/xmas/style.css
+++ b/xmas/style.css
@@ -122,7 +122,7 @@ p {
   padding-right: 0.18em;
 }
 
-main {
+.wrapper {
   display: block;
   width: 100%;
   margin: 0 auto;
@@ -151,11 +151,13 @@ aside p {
 }
 
 .mainContent {
+  display:block;  
   flex:9.5;
   padding: 1em .5em;
 }
 
 .sideContent {
+  display: block;
   flex:2.5;
   padding: 1em .5em;
   flex-wrap: wrap;
@@ -235,7 +237,7 @@ footer {
     border-radius: 18px 0 0 0;
   }  
 
-   main {
+   .wrapper {
      width: 96%;
    }
    
@@ -253,12 +255,10 @@ footer {
     width: 235px;
     height: auto;
   }   
-	
   iframe {
     width: 85%;
     height:85%
   }   
-	
   footer {
     width: 96%;  
   }
@@ -296,7 +296,7 @@ footer {
     width: 85%;
   }
 
-  main {
+  .wrapper {
     display: flex;
   }
   
