--- a/xmas/style.css
+++ b/xmas/style.css
@@ -268,6 +268,9 @@ footer {
 @media only screen and (min-width: 48em) {
   html {
     background-image: url("christmasBackground2.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
     background-size: cover;
   }
   
